# edio

./: Cargo.toml  Makefile  README.md  dist-workspace.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: release.yml  unit-test.yml
scripts/: release.sh
src/: editor.rs  main.rs
tapes/: demo.tape
