[package]
name = "edio"
version = "0.2.1"
authors = ["muleyuck <takuty.008.awenite.1121@gmail.com>"]
edition = "2021"
description = "A command-line tool that opens stdin in your editor and outputs the result to stdout"
repository = "https://github.com/muleyuck/edio"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tempfile = "3.24.0"

[dev-dependencies]
serial_test = "3.2.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
